--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- link to bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- link to css file -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./signup1/styles.css">
     <title>Singh's Brother Sign Up</title>
 </head>
 <body>
@@ -44,7 +44,7 @@
                 <p class="register_text">Already have an account? <span class="text_highlights">Login</span></p>
             </div>
             <div class="col-md-6 image_area">
-                <img src="./assets/undraw_invest_88iw.svg" alt="human_img" class="img-fluid"/>
+                <img src="./signup1//assets/undraw_invest_88iw.svg" alt="human_img" class="img-fluid"/>
             </div>
         </div>
     </div>
